<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="button_label_spotify">Spotify Streamer</string>
    <string name="button_label_duo">Super Duo</string>
    <string name="button_label_build_it_bigger">Build It Bigger</string>
    <string name="button_label_xyz_reader">XYZ Reader</string>
    <string name="button_label_capstone">Capstone</string>
</resources>
