<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    style="@android:style/Theme.Material.Light"
    android:clickable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_nanodegree_apps"
        android:id="@+id/textView"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_spotify"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:onClick="onButtonClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_duo"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:onClick="onButtonClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_build_it_bigger"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:onClick="onButtonClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_xyz_reader"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:onClick="onButtonClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_capstone"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:onClick="onButtonClick" />
</RelativeLayout>
